recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:10: error: not found: value lenght
 	 lenght+1;
         ^